Update 0708 AE loss

--- a/0708/Preview/AutoEncoder.ipynb
+++ b/0708/Preview/AutoEncoder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,26 +122,35 @@
    "metadata": {},
    "source": [
     "---\n",
-    "### model"
+    "### model\n",
+    "loss用cross entropy的原因\n",
+    "> https://stackoverflow.com/questions/52441877/how-does-binary-cross-entropy-loss-work-on-autoencoders"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "W0707 20:42:00.430141  9784 deprecation_wrapper.py:119] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\keras\\optimizers.py:790: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+      "WARNING: Logging before flag parsing goes to stderr.\n",
+      "W0709 09:45:36.093010 12880 deprecation_wrapper.py:119] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:74: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
       "\n",
-      "W0707 20:42:00.441141  9784 deprecation_wrapper.py:119] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:3376: The name tf.log is deprecated. Please use tf.math.log instead.\n",
+      "W0709 09:45:36.113011 12880 deprecation_wrapper.py:119] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:517: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
       "\n",
-      "W0707 20:42:00.443114  9784 deprecation.py:323] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\tensorflow\\python\\ops\\nn_impl.py:180: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+      "W0709 09:45:36.118011 12880 deprecation_wrapper.py:119] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:4138: The name tf.random_uniform is deprecated. Please use tf.random.uniform instead.\n",
+      "\n",
+      "W0709 09:45:36.161036 12880 deprecation_wrapper.py:119] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\keras\\optimizers.py:790: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+      "\n",
+      "W0709 09:45:36.172006 12880 deprecation_wrapper.py:119] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:3376: The name tf.log is deprecated. Please use tf.math.log instead.\n",
+      "\n",
+      "W0709 09:45:36.175005 12880 deprecation.py:323] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\tensorflow\\python\\ops\\nn_impl.py:180: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
-      "W0707 20:42:00.541140  9784 deprecation_wrapper.py:119] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:986: The name tf.assign_add is deprecated. Please use tf.compat.v1.assign_add instead.\n",
+      "W0709 09:45:36.282037 12880 deprecation_wrapper.py:119] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:986: The name tf.assign_add is deprecated. Please use tf.compat.v1.assign_add instead.\n",
       "\n"
      ]
     },
@@ -151,54 +160,54 @@
      "text": [
       "Train on 54000 samples, validate on 6000 samples\n",
       "Epoch 1/20\n",
-      " - 2s - loss: 0.4648 - val_loss: 0.3593\n",
+      " - 4s - loss: 0.2528 - val_loss: 0.1733\n",
       "Epoch 2/20\n",
-      " - 1s - loss: 0.3410 - val_loss: 0.3168\n",
+      " - 1s - loss: 0.1554 - val_loss: 0.1435\n",
       "Epoch 3/20\n",
-      " - 1s - loss: 0.3254 - val_loss: 0.3058\n",
+      " - 1s - loss: 0.1373 - val_loss: 0.1306\n",
       "Epoch 4/20\n",
-      " - 1s - loss: 0.3093 - val_loss: 0.3257\n",
+      " - 1s - loss: 0.1269 - val_loss: 0.1228\n",
       "Epoch 5/20\n",
-      " - 1s - loss: 0.2835 - val_loss: 0.2722\n",
+      " - 1s - loss: 0.1207 - val_loss: 0.1182\n",
       "Epoch 6/20\n",
-      " - 1s - loss: 0.2658 - val_loss: 0.2583\n",
+      " - 1s - loss: 0.1165 - val_loss: 0.1149\n",
       "Epoch 7/20\n",
-      " - 1s - loss: 0.2918 - val_loss: 0.2818\n",
+      " - 1s - loss: 0.1134 - val_loss: 0.1121\n",
       "Epoch 8/20\n",
-      " - 1s - loss: 0.2933 - val_loss: 0.2680\n",
+      " - 1s - loss: 0.1107 - val_loss: 0.1097\n",
       "Epoch 9/20\n",
-      " - 1s - loss: 0.2605 - val_loss: 0.2505\n",
+      " - 1s - loss: 0.1086 - val_loss: 0.1079\n",
       "Epoch 10/20\n",
-      " - 1s - loss: 0.2524 - val_loss: 0.2431\n",
+      " - 1s - loss: 0.1067 - val_loss: 0.1058\n",
       "Epoch 11/20\n",
-      " - 1s - loss: 0.2446 - val_loss: 0.2447\n",
+      " - 1s - loss: 0.1051 - val_loss: 0.1047\n",
       "Epoch 12/20\n",
-      " - 1s - loss: 0.2668 - val_loss: 0.2615\n",
+      " - 1s - loss: 0.1037 - val_loss: 0.1030\n",
       "Epoch 13/20\n",
-      " - 1s - loss: 0.2496 - val_loss: 0.2432\n",
+      " - 1s - loss: 0.1024 - val_loss: 0.1024\n",
       "Epoch 14/20\n",
-      " - 1s - loss: 0.2391 - val_loss: 0.2408\n",
+      " - 1s - loss: 0.1011 - val_loss: 0.1007\n",
       "Epoch 15/20\n",
-      " - 1s - loss: 0.2402 - val_loss: 0.2749\n",
+      " - 1s - loss: 0.0998 - val_loss: 0.0997\n",
       "Epoch 16/20\n",
-      " - 1s - loss: 0.2404 - val_loss: 0.2263\n",
+      " - 1s - loss: 0.0988 - val_loss: 0.0987\n",
       "Epoch 17/20\n",
-      " - 1s - loss: 0.2282 - val_loss: 0.2228\n",
+      " - 1s - loss: 0.0979 - val_loss: 0.0978\n",
       "Epoch 18/20\n",
-      " - 1s - loss: 0.2231 - val_loss: 0.2185\n",
+      " - 1s - loss: 0.0972 - val_loss: 0.0973\n",
       "Epoch 19/20\n",
-      " - 1s - loss: 0.2391 - val_loss: 0.2290\n",
+      " - 1s - loss: 0.0964 - val_loss: 0.0966\n",
       "Epoch 20/20\n",
-      " - 1s - loss: 0.2238 - val_loss: 0.2173\n"
+      " - 1s - loss: 0.0957 - val_loss: 0.0964\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x2f5387ec4e0>"
+       "<keras.callbacks.History at 0x1d61462dfd0>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +223,7 @@
     "\n",
     "dencoded = Dense(64, activation='relu')(encoded)\n",
     "dencoded = Dense(128, activation='relu')(dencoded)\n",
-    "dencoded = Dense(784, activation='relu')(dencoded)\n",
+    "dencoded = Dense(784, activation='sigmoid')(dencoded)\n",
     "autoencoder= Model(input_img, dencoded)\n",
     "\n",
     "autoencoder.compile(optimizer='adam', loss='binary_crossentropy')\n",
@@ -393,6 +402,7 @@
     "\n",
     "# at this point the representation is (4, 4, 8) i.e. 128-dimensional: 4*4*8=128\n",
     "\n",
+    "# Cov2D加上padding就是 DeConv\n",
     "# Decoder 的過程與 Encoder 正好相反，需要跟 Encoder 的神經網絡層做相對應，相對應的激活函數也是一樣，但這邊在解碼中最後一層使用的激活函數是 sigmoid\n",
     "x = Conv2D(8, (3, 3), activation='relu', padding='same')(encoded)\n",
     "x = UpSampling2D((2, 2))(x)\n",
