--- a/0705/practice.ipynb
+++ b/0705/practice.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,12 +147,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 參數設定\n",
     "max_len = 30"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def shuffle(X,Y):\n",
+    "  np.random.seed(10)\n",
+    "  randomList = np.arange(X.shape[0])\n",
+    "  np.random.shuffle(randomList)\n",
+    "  return X[randomList], Y[randomList]"
    ]
   },
   {
@@ -317,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,9 +390,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Logging before flag parsing goes to stderr.\n",
+      "W0705 23:14:54.317387 13484 deprecation_wrapper.py:119] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:74: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "\n",
+      "W0705 23:14:54.329567 13484 deprecation_wrapper.py:119] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:517: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
+      "\n",
+      "W0705 23:14:54.330569 13484 deprecation_wrapper.py:119] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:4138: The name tf.random_uniform is deprecated. Please use tf.random.uniform instead.\n",
+      "\n",
+      "W0705 23:14:55.150772 13484 deprecation_wrapper.py:119] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:133: The name tf.placeholder_with_default is deprecated. Please use tf.compat.v1.placeholder_with_default instead.\n",
+      "\n",
+      "W0705 23:14:55.154847 13484 deprecation.py:506] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:3445: calling dropout (from tensorflow.python.ops.nn_ops) with keep_prob is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use `rate` instead of `keep_prob`. Rate should be set to `rate = 1 - keep_prob`.\n",
+      "W0705 23:14:55.175773 13484 deprecation_wrapper.py:119] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\keras\\optimizers.py:790: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+      "\n",
+      "W0705 23:14:55.187801 13484 deprecation_wrapper.py:119] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:3341: The name tf.log is deprecated. Please use tf.math.log instead.\n",
+      "\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -387,20 +422,20 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "embedding_5 (Embedding)      (None, 30, 60)            128220    \n",
+      "embedding_1 (Embedding)      (None, None, 5)           10685     \n",
       "_________________________________________________________________\n",
-      "cu_dnnlstm_11 (CuDNNLSTM)    (None, 30, 30)            11040     \n",
+      "cu_dnnlstm_1 (CuDNNLSTM)     (None, None, 30)          4440      \n",
       "_________________________________________________________________\n",
-      "cu_dnnlstm_12 (CuDNNLSTM)    (None, 20)                4160      \n",
+      "cu_dnnlstm_2 (CuDNNLSTM)     (None, 20)                4160      \n",
       "_________________________________________________________________\n",
-      "dropout_5 (Dropout)          (None, 20)                0         \n",
+      "dropout_1 (Dropout)          (None, 20)                0         \n",
       "_________________________________________________________________\n",
-      "dense_12 (Dense)             (None, 10)                210       \n",
+      "dense_1 (Dense)              (None, 10)                210       \n",
       "_________________________________________________________________\n",
-      "dense_13 (Dense)             (None, 2)                 22        \n",
+      "dense_2 (Dense)              (None, 2)                 22        \n",
       "=================================================================\n",
-      "Total params: 143,652\n",
-      "Trainable params: 143,652\n",
+      "Total params: 19,517\n",
+      "Trainable params: 19,517\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -414,10 +449,11 @@
     "\n",
     "model_LSTM = Sequential()\n",
     "\n",
-    "# Embedding\n",
-    "model_LSTM.add(Embedding(output_dim=60, input_dim=len(token.word_index), input_length=max_len))\n",
+    "# Embedding shape (字典詞的數量/ batch_size, 每個字的長度, 輸出的維度)\n",
+    "model_LSTM.add(Embedding(output_dim=5, input_dim=len(token.word_index), input_length=max_len)) # 沒有 input_length也能訓練\n",
     "# model_LSTM.add(Embedding(output_dim=44, input_dim=len(sentence_dict), input_length=max_len))\n",
-    "model_LSTM.add(CuDNNLSTM(30, input_shape=(max_len, 1), return_sequences=True))\n",
+    "# LSTM輸入(samples，timesteps，input_dim），輸出(samples，timesteps，output_dim）\n",
+    "model_LSTM.add(CuDNNLSTM(30, return_sequences=True))\n",
     "# model_LSTM.add(CuDNNLSTM(50, return_sequences=True))\n",
     "# model_LSTM.add(CuDNNLSTM(40, return_sequences=True))\n",
     "# model_LSTM.add(CuDNNLSTM(30, return_sequences=True))\n",
@@ -437,43 +473,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "W0705 23:14:57.098093 13484 deprecation.py:323] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\tensorflow\\python\\ops\\math_grad.py:1250: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Train on 988 samples, validate on 247 samples\n",
       "Epoch 1/10\n",
-      " - 0s - loss: 0.0348 - acc: 0.9909 - val_loss: 2.8312 - val_acc: 0.4494\n",
+      " - 3s - loss: 0.6933 - acc: 0.5395 - val_loss: 0.7351 - val_acc: 0.0000e+00\n",
       "Epoch 2/10\n",
-      " - 0s - loss: 0.0224 - acc: 0.9909 - val_loss: 3.2816 - val_acc: 0.4089\n",
+      " - 0s - loss: 0.6923 - acc: 0.5476 - val_loss: 0.7419 - val_acc: 0.0000e+00\n",
       "Epoch 3/10\n",
-      " - 0s - loss: 0.0139 - acc: 0.9970 - val_loss: 3.2513 - val_acc: 0.4656\n",
+      " - 0s - loss: 0.6897 - acc: 0.5385 - val_loss: 0.7671 - val_acc: 0.0000e+00\n",
       "Epoch 4/10\n",
-      " - 0s - loss: 0.0176 - acc: 0.9949 - val_loss: 3.5921 - val_acc: 0.3887\n",
+      " - 0s - loss: 0.6861 - acc: 0.5405 - val_loss: 0.9175 - val_acc: 0.0000e+00\n",
       "Epoch 5/10\n",
-      " - 0s - loss: 0.0143 - acc: 0.9980 - val_loss: 3.5359 - val_acc: 0.4534\n",
+      " - 0s - loss: 0.6737 - acc: 0.5526 - val_loss: 0.7544 - val_acc: 0.2105\n",
       "Epoch 6/10\n",
-      " - 0s - loss: 0.0099 - acc: 0.9980 - val_loss: 4.6722 - val_acc: 0.3765\n",
+      " - 0s - loss: 0.5393 - acc: 0.7561 - val_loss: 1.9330 - val_acc: 0.2510\n",
       "Epoch 7/10\n",
-      " - 0s - loss: 0.0080 - acc: 0.9990 - val_loss: 4.0532 - val_acc: 0.4251\n",
+      " - 0s - loss: 0.3414 - acc: 0.8654 - val_loss: 1.4879 - val_acc: 0.3644\n",
       "Epoch 8/10\n",
-      " - 0s - loss: 0.0066 - acc: 0.9990 - val_loss: 4.1387 - val_acc: 0.4696\n",
+      " - 0s - loss: 0.2143 - acc: 0.9211 - val_loss: 1.9180 - val_acc: 0.3684\n",
       "Epoch 9/10\n",
-      " - 0s - loss: 0.0084 - acc: 0.9990 - val_loss: 4.2849 - val_acc: 0.4211\n",
+      " - 0s - loss: 0.1515 - acc: 0.9575 - val_loss: 2.0282 - val_acc: 0.4696\n",
       "Epoch 10/10\n",
-      " - 0s - loss: 0.0079 - acc: 0.9990 - val_loss: 4.1100 - val_acc: 0.4615\n"
+      " - 0s - loss: 0.1077 - acc: 0.9646 - val_loss: 2.6147 - val_acc: 0.4575\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x232e3934160>"
+       "<keras.callbacks.History at 0x25ad1af0be0>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
