--- a/0708/Preview/demo.ipynb
+++ b/0708/Preview/demo.ipynb
@@ -12,13 +12,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 參數設定\n",
     "batch_size = 64  # Batch size for training.\n",
-    "epochs = 30  # Number of epochs to train for.\n",
+    "epochs = 50  # Number of epochs to train for.\n",
     "latent_dim = 256  # Latent dimensionality of the encoding space.\n",
     "num_samples = 10000  # Number of samples to train on.\n",
     "\n",
@@ -27,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -106,122 +115,16 @@
     "        if t > 0:\n",
     "            # decoder_target_data will be ahead by one timestep\n",
     "            # and will not include the start character.\n",
-    "            decoder_target_data[i, t - 1, target_token_index[char]] = 1."
+    "            decoder_target_data[i, t - 1, target_token_index[char]] = 1.\n",
+    "            \n",
+    "# 切割 test\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train on 8000 samples, validate on 2000 samples\n",
-      "Epoch 1/30\n",
-      " - 10s - loss: 1.9833 - val_loss: 2.4927\n",
-      "Epoch 2/30\n",
-      " - 9s - loss: 1.8523 - val_loss: 2.3244\n",
-      "Epoch 3/30\n",
-      " - 9s - loss: 1.7313 - val_loss: 2.2152\n",
-      "Epoch 4/30\n",
-      " - 9s - loss: 1.6323 - val_loss: 2.1514\n",
-      "Epoch 5/30\n",
-      " - 9s - loss: 1.5467 - val_loss: 2.0354\n",
-      "Epoch 6/30\n",
-      " - 9s - loss: 1.4647 - val_loss: 1.9767\n",
-      "Epoch 7/30\n",
-      " - 9s - loss: 1.3984 - val_loss: 1.9177\n",
-      "Epoch 8/30\n",
-      " - 9s - loss: 1.3377 - val_loss: 1.8740\n",
-      "Epoch 9/30\n",
-      " - 9s - loss: 1.2839 - val_loss: 1.8353\n",
-      "Epoch 10/30\n",
-      " - 9s - loss: 1.2424 - val_loss: 1.8126\n",
-      "Epoch 11/30\n",
-      " - 9s - loss: 1.2009 - val_loss: 1.7906\n",
-      "Epoch 12/30\n",
-      " - 9s - loss: 1.1604 - val_loss: 1.7640\n",
-      "Epoch 13/30\n",
-      " - 9s - loss: 1.1256 - val_loss: 1.7509\n",
-      "Epoch 14/30\n",
-      " - 9s - loss: 1.0904 - val_loss: 1.7331\n",
-      "Epoch 15/30\n",
-      " - 9s - loss: 1.0577 - val_loss: 1.7178\n",
-      "Epoch 16/30\n",
-      " - 9s - loss: 1.0282 - val_loss: 1.7064\n",
-      "Epoch 17/30\n",
-      " - 9s - loss: 0.9990 - val_loss: 1.7032\n",
-      "Epoch 18/30\n",
-      " - 9s - loss: 0.9707 - val_loss: 1.6976\n",
-      "Epoch 19/30\n",
-      " - 9s - loss: 0.9444 - val_loss: 1.7014\n",
-      "Epoch 20/30\n",
-      " - 9s - loss: 0.9204 - val_loss: 1.6895\n",
-      "Epoch 21/30\n",
-      " - 9s - loss: 0.8943 - val_loss: 1.6862\n",
-      "Epoch 22/30\n",
-      " - 9s - loss: 0.8715 - val_loss: 1.6828\n",
-      "Epoch 23/30\n",
-      " - 9s - loss: 0.8488 - val_loss: 1.6905\n",
-      "Epoch 24/30\n",
-      " - 9s - loss: 0.8264 - val_loss: 1.6946\n",
-      "Epoch 25/30\n",
-      " - 9s - loss: 0.8051 - val_loss: 1.6830\n",
-      "Epoch 26/30\n",
-      " - 9s - loss: 0.7843 - val_loss: 1.7046\n",
-      "Epoch 27/30\n",
-      " - 9s - loss: 0.7654 - val_loss: 1.6884\n",
-      "Epoch 28/30\n",
-      " - 9s - loss: 0.7456 - val_loss: 1.7079\n",
-      "Epoch 29/30\n",
-      " - 9s - loss: 0.7267 - val_loss: 1.6902\n",
-      "Epoch 30/30\n",
-      " - 9s - loss: 0.7088 - val_loss: 1.7030\n",
-      "*\n",
-      "Input sentence: Hi.\n",
-      "Decoded sentence: 你不好。\n",
-      "\n",
-      "*\n",
-      "Input sentence: Hi.\n",
-      "Decoded sentence: 你不好。\n",
-      "\n",
-      "*\n",
-      "Input sentence: Run.\n",
-      "Decoded sentence: 不要擔心。\n",
-      "\n",
-      "*\n",
-      "Input sentence: Wait!\n",
-      "Decoded sentence: 我們這個嗎？\n",
-      "\n",
-      "*\n",
-      "Input sentence: Hello!\n",
-      "Decoded sentence: 你不好。\n",
-      "\n",
-      "*\n",
-      "Input sentence: I try.\n",
-      "Decoded sentence: 我喜歡你。\n",
-      "\n",
-      "*\n",
-      "Input sentence: I won!\n",
-      "Decoded sentence: 我想你。\n",
-      "\n",
-      "*\n",
-      "Input sentence: Oh no!\n",
-      "Decoded sentence: 你不好。\n",
-      "\n",
-      "*\n",
-      "Input sentence: Cheers!\n",
-      "Decoded sentence: 請開！\n",
-      "\n",
-      "*\n",
-      "Input sentence: He ran.\n",
-      "Decoded sentence: 他不會游泳。\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from keras.models import Model\n",
     "from keras.layers import Input, LSTM, Dense\n",
@@ -325,16 +228,50 @@
     "        # Update states\n",
     "        states_value = [h, c]\n",
     "\n",
-    "    return decoded_sentence\n",
-    "\n",
+    "    return decoded_sentence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def transform_new_input(new_input):\n",
+    "    for t, char in enumerate(new_input):\n",
+    "        encoder_input_data[15000, t, input_token_index[char]] = 1.\n",
+    "    print(en)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'你'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-9-9662a3d13bf7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m#     input_seq = encoder_input_data[seq_index: seq_index + 1]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mnew_sentence\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'你好'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m     \u001b[0minput_seq\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtransform_new_input\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnew_sentence\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m     \u001b[1;31m# 帶進去預測\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;31m#     decoded_sentence = decode_sequence(input_seq)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-8-364c29e731c5>\u001b[0m in \u001b[0;36mtransform_new_input\u001b[1;34m(new_input)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mtransform_new_input\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnew_input\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mt\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mchar\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnew_input\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m         \u001b[0mencoder_input_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m15000\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mt\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minput_token_index\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mchar\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0men\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: '你'"
+     ]
+    }
+   ],
+   "source": [
     "# 測試10次\n",
-    "for seq_index in range(10):\n",
-    "    # Take one sequence (part of the training test)\n",
-    "    # for trying out decoding.\n",
-    "    input_seq = encoder_input_data[seq_index: seq_index + 1]\n",
-    "    decoded_sentence = decode_sequence(input_seq)\n",
+    "for seq_index in range(1):\n",
+    "#     input_seq = encoder_input_data[seq_index: seq_index + 1]\n",
+    "    new_sentence = '你好'\n",
+    "    input_seq = transform_new_input(new_sentence)\n",
+    "    # 帶進去預測\n",
+    "#     decoded_sentence = decode_sequence(input_seq)\n",
     "    print('*')\n",
-    "    print('Input sentence:', input_texts[seq_index])\n",
+    "#     print('Input sentence:', input_texts[seq_index])\n",
+    "    print('Input sentence:', new_sentence)\n",
     "    try:\n",
     "        print('Decoded sentence:', decoded_sentence)\n",
     "    except:\n",
