avoid fetch the existed pictures

--- a/0806/googlemap.ipynb
+++ b/0806/googlemap.ipynb
@@ -186,16 +186,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['新北市板橋區華東街271號', '新北市板橋區華東街281號', '新北市板橋區華東街300號']"
+       "['新北市三峽區大學路1號', '新北市三峽區大學路11號', '新北市三峽區大學路21號', '新北市三峽區大學路30號']"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,9 +203,9 @@
    "source": [
     "# 產生分段的地址\n",
     "address_parts = []\n",
-    "for i in range(0, size):\n",
+    "for i in range(0, size+1):\n",
     "    # 結尾append結束數字\n",
-    "    if i == size-1:\n",
+    "    if i == size:\n",
     "        address_parts.append(re.sub('\\~', str(address_num[1]), address_template))\n",
     "    else:\n",
     "        address_parts.append(re.sub('\\~', str(int(address_num[0])+10*i), address_template))\n",
@@ -318,6 +318,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 經緯度抓"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -349,23 +356,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'新北市板橋區華東街271~300號'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "land_df['address'][0]"
+    "### 根據地址抓"
    ]
   },
   {
@@ -484,26 +478,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['新北市土城區延和路', '巷', '~', '號']"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "re.split('\\d+', land_df['address'][3])"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -512,11 +486,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for m in range(0, 16):\n",
+    "import os\n",
+    "\n",
+    "for m in range(0, 100):\n",
     "    try:\n",
     "        address_num = re.findall('\\d+', land_df['address'][m])\n",
     "        if(len(re.findall('\\d+', land_df['address'][3])) > 2):\n",
@@ -539,18 +515,20 @@
     "            address_template = ''.join(address_split)\n",
     "            \n",
     "        address_parts = []\n",
-    "        for i in range(0, size):\n",
+    "        for i in range(0, size+1):\n",
     "            # 結尾append結束數字\n",
-    "            if i == size-1:\n",
+    "            if i == size:\n",
     "                address_parts.append(re.sub('\\~', str(address_num[1]), address_template))\n",
     "            else:\n",
     "                address_parts.append(re.sub('\\~', str(int(address_num[0])+10*i), address_template))\n",
     "                \n",
     "        for j in range(0, len(address_parts)):\n",
-    "            part_address = 'https://maps.googleapis.com/maps/api/streetview?location='+ address_parts[j] +'&key='+ key2 +'&size=600x300&fov=120'\n",
-    "            r = requests.get(part_address)\n",
-    "            img = Image.open(io.BytesIO(r.content))\n",
-    "            img.save('./land_streetView/' + address_parts[j] +'.jpg', 'JPEG')\n",
+    "            # 如果照片不存在, 才fetch\n",
+    "            if(not os.path.isfile('./land_streetView/' + address_parts[j] +'.jpg')):\n",
+    "                part_address = 'https://maps.googleapis.com/maps/api/streetview?location='+ address_parts[j] +'&key='+ key2 +'&size=600x300&fov=120'\n",
+    "                r = requests.get(part_address)\n",
+    "                img = Image.open(io.BytesIO(r.content))\n",
+    "                img.save('./land_streetView/' + address_parts[j] +'.jpg', 'JPEG')\n",
     "        \n",
     "    except:\n",
     "        continue"
