--- a/0808/multimodal.ipynb
+++ b/0808/multimodal.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
     "from glob import glob\n",
     "from PIL import Image\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import re\n",
     "import math\n",
     "from keras.layers import Input, Concatenate, Conv2D, Flatten, Dense\n",
@@ -422,173 +423,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 根據test DF處理圖片的形狀(完整的path_list, 第一維的size要跟label一致)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_pic = []\n",
+    "label = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "新北市板橋區華東街\n",
-      "新北市板橋區華東街\n",
-      "新北市板橋區華東街\n",
-      "新北市板橋區華東街\n",
-      "新北市板橋區華東街\n",
-      "新北市板橋區華東街\n",
-      "新北市板橋區華東街\n",
-      "新北市板橋區華東街\n",
-      "新北市板橋區華東街\n",
-      "新北市板橋區華東街\n",
-      "新北市板橋區華東街\n",
-      "新北市板橋區華東街\n",
-      "新北市板橋區華東街\n",
-      "新北市板橋區華東街\n",
-      "新北市板橋區華東街\n",
-      "新北市板橋區華東街\n",
-      "新北市板橋區華東街\n",
-      "新北市板橋區華東街\n",
-      "新北市板橋區華東街\n",
-      "新北市板橋區華東街\n",
-      "新北市板橋區華東街\n",
-      "新北市板橋區華東街\n",
-      "新北市板橋區華東街\n",
-      "新北市板橋區華東街\n",
-      "24\n",
-      "新北市土城區永豐路\n",
-      "新北市土城區永豐路\n",
-      "新北市土城區永豐路\n",
-      "新北市土城區永豐路\n",
-      "新北市土城區永豐路\n",
-      "新北市土城區永豐路\n",
-      "新北市土城區永豐路\n",
-      "新北市土城區永豐路\n",
-      "新北市土城區永豐路\n",
-      "新北市土城區永豐路\n",
-      "新北市土城區永豐路\n",
-      "新北市土城區永豐路\n",
-      "新北市土城區永豐路\n",
-      "新北市土城區永豐路\n",
-      "新北市土城區永豐路\n",
-      "新北市土城區永豐路\n",
-      "新北市土城區永豐路\n",
-      "新北市土城區永豐路\n",
-      "新北市土城區永豐路\n",
-      "新北市土城區永豐路\n",
-      "新北市土城區永豐路\n",
-      "新北市土城區永豐路\n",
-      "新北市土城區永豐路\n",
-      "新北市土城區永豐路\n",
-      "117\n",
-      "新北市板橋區新崑路\n",
-      "新北市板橋區新崑路\n",
-      "新北市板橋區新崑路\n",
-      "新北市板橋區新崑路\n",
-      "新北市板橋區新崑路\n",
-      "新北市板橋區新崑路\n",
-      "新北市板橋區新崑路\n",
-      "新北市板橋區新崑路\n",
-      "新北市板橋區新崑路\n",
-      "新北市板橋區新崑路\n",
-      "新北市板橋區新崑路\n",
-      "新北市板橋區新崑路\n",
-      "12\n",
-      "新北市土城區延和路76巷\n",
-      "新北市土城區延和路76巷\n",
-      "新北市土城區延和路76巷\n",
-      "新北市土城區延和路76巷\n",
-      "新北市土城區延和路76巷\n",
-      "新北市土城區延和路76巷\n",
-      "新北市土城區延和路76巷\n",
-      "新北市土城區延和路76巷\n",
-      "新北市土城區延和路76巷\n",
-      "新北市土城區延和路76巷\n",
-      "新北市土城區延和路76巷\n",
-      "新北市土城區延和路76巷\n",
-      "12\n",
-      "新北市板橋區中山路一段\n",
-      "新北市板橋區中山路一段\n",
-      "新北市板橋區中山路一段\n",
-      "新北市板橋區中山路一段\n",
-      "新北市板橋區中山路一段\n",
-      "新北市板橋區中山路一段\n",
-      "新北市板橋區中山路一段\n",
-      "新北市板橋區中山路一段\n",
-      "新北市板橋區中山路一段\n",
-      "新北市板橋區中山路一段\n",
-      "新北市板橋區中山路一段\n",
-      "新北市板橋區中山路一段\n",
-      "新北市板橋區中山路一段\n",
-      "新北市板橋區中山路一段\n",
-      "新北市板橋區中山路一段\n",
-      "新北市板橋區中山路一段\n",
-      "新北市板橋區中山路一段\n",
-      "新北市板橋區中山路一段\n",
-      "新北市板橋區中山路一段\n",
-      "新北市板橋區中山路一段\n",
-      "新北市板橋區中山路一段\n",
-      "新北市板橋區中山路一段\n",
-      "新北市板橋區中山路一段\n",
-      "新北市板橋區中山路一段\n",
-      "新北市板橋區中山路一段\n",
-      "新北市板橋區中山路一段\n",
-      "新北市板橋區中山路一段\n",
-      "新北市板橋區中山路一段\n",
-      "新北市板橋區中山路一段\n",
-      "新北市板橋區中山路一段\n",
-      "新北市板橋區中山路一段\n",
-      "新北市板橋區中山路一段\n",
-      "新北市板橋區中山路一段\n",
-      "新北市板橋區中山路一段\n",
-      "新北市板橋區中山路一段\n",
-      "新北市板橋區中山路一段\n",
-      "60\n"
+      "list index out of range\n",
+      "list index out of range\n"
      ]
     }
    ],
    "source": [
     "# 判斷每個地址有幾張圖\n",
-    "for m, data in street_df[:5000].head().iterrows():\n",
+    "for m, data in street_df[:5000].loc[street_df[:5000]['section'] == '板橋'].iterrows():\n",
     "    backup_num = []\n",
-    "    address_num = re.findall('\\d+', data['address'])\n",
-    "    if(len(re.findall('\\d+', data['address'])) > 2):\n",
-    "        # 存大於2個的數值(有巷/弄)\n",
-    "        backup_num = address_num\n",
-    "        # 取倒數兩個\n",
-    "        address_num = address_num[-2:]\n",
+    "    try:\n",
+    "        address_num = re.findall('\\d+', data['address'])\n",
+    "        if(len(re.findall('\\d+', data['address'])) > 2):\n",
+    "            # 存大於2個的數值(有巷/弄)\n",
+    "            backup_num = address_num\n",
+    "            # 取倒數兩個\n",
+    "            address_num = address_num[-2:]\n",
     "\n",
-    "    size = math.ceil((int(address_num[1]) - int(address_num[0]))/10)\n",
-    "    address_split = re.split('\\d+', data['address'])\n",
-    "    address_split.remove('~')\n",
-    "    address_split.remove('號')\n",
-    "    address_template = ''.join(address_split)\n",
-    "    if(len(backup_num) == 3):\n",
-    "        #有巷\n",
-    "        address_split[0] = address_split[0] + backup_num[0]\n",
+    "        size = math.ceil((int(address_num[1]) - int(address_num[0]))/10)\n",
+    "        address_split = re.split('\\d+', data['address'])\n",
+    "        address_split.remove('~')\n",
+    "        address_split.remove('號')\n",
     "        address_template = ''.join(address_split)\n",
-    "    if(len(backup_num) == 4):\n",
-    "        # 有巷也有弄\n",
-    "        address_split[0] = address_split[0] + backup_num[0]\n",
-    "        address_split[1] = address_split[1] + backup_num[1]\n",
-    "        address_template = ''.join(address_split)\n",
-    "    \n",
-    "    img_path_list = glob('../0806/land_streetView/*degree/' + address_template + '*.jpg')\n",
-    "    \n",
-    "    for img in img_path_list:\n",
-    "        pattern = re.compile(address_template + '\\d+號')\n",
-    "        if pattern.search(img):\n",
-    "            print(address_template)\n",
-    "    \n",
-    "    print(len(img_path_list))\n",
-    "        "
+    "        if(len(backup_num) == 3):\n",
+    "            #有巷\n",
+    "            address_split[0] = address_split[0] + backup_num[0]\n",
+    "            address_template = ''.join(address_split)\n",
+    "        if(len(backup_num) == 4):\n",
+    "            # 有巷也有弄\n",
+    "            address_split[0] = address_split[0] + backup_num[0]\n",
+    "            address_split[1] = address_split[1] + backup_num[1]\n",
+    "            address_template = ''.join(address_split)\n",
+    "\n",
+    "        img_path_list = glob('../0806/land_streetView/*degree/' + address_template + '*.jpg')\n",
+    "        match_list = [] # 記錄有幾張照片符合規則\n",
+    "        price_list = [] # 此地址有多少種售價\n",
+    "        for img in img_path_list:\n",
+    "            pattern = re.compile(address_template + '\\d+號')\n",
+    "            if pattern.search(img):\n",
+    "                match_list.append(img)\n",
+    "                # 紀錄單一地址對應到哪些照片路徑\n",
+    "\n",
+    "        for w, data in test.iterrows():\n",
+    "            pattern = re.compile(address_template + '\\d+\\~\\d+號')\n",
+    "            if pattern.search(data['address']):\n",
+    "                price_list.append(data['price'])\n",
+    "\n",
+    "        # 處理label, 根據有幾張圖，決定要給幾次一樣的label\n",
+    "        # 一個地址有多少種prcie\n",
+    "        for k in range(0, len(price_list)):\n",
+    "            # 每種售價根據照片數目填上label\n",
+    "            for index in range(0, len(match_list)):\n",
+    "                label.append(price_list[k])\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
+    "        continue\n",
+    "\n",
+    "# list to numpy array\n",
+    "label = np.array(label)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(608281,)"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "label.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 處理label, 根據有幾張圖，決定要給幾次一樣的label\n"
+    "np.save('label_index5000_all_section', label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(608281,)"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.load('label_index5000_all_section.npy').shape"
    ]
   },
   {
@@ -613,7 +581,8 @@
     "\n",
     "model_CNN.add(Dense(128, activation='relu'))\n",
     "model_CNN.add(Dropout(0.5))\n",
-    "model_CNN.add(Dense(num_classes, activation='softmax'))\n",
+    "# 預測價格\n",
+    "model_CNN.add(Dense(1, activation='relu'))\n",
     "\n",
     "model_CNN.summary()"
    ]
@@ -625,7 +594,7 @@
    "outputs": [],
    "source": [
     "model_CNN.compile(loss='mean_absolute_percentage_error', optimizer='adam')\n",
-    "train_history = model_CNN.fit(x=x_Train_norm, y=y_train, validation_split=0.3, epochs=10, batch_size=100, verbose=1)"
+    "train_history = model_CNN.fit(x=x_Train_norm, y=label, validation_split=0.3, epochs=10, batch_size=100, verbose=1)"
    ]
   },
   {
